@@ -5,130 +5,98 @@ import com.taskmanager.dto.request.LoginRequest;
 import com.taskmanager.dto.request.RegisterRequest;
 import com.taskmanager.dto.response.LoginResponse;
 import com.taskmanager.entity.User;
-import com.taskmanager.exception.DuplicateResourceException;
-import com.taskmanager.exception.ResourceNotFoundException;
 import com.taskmanager.repository.UserRepository;
 import com.taskmanager.security.JwtTokenProvider;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
-@SuppressWarnings("null")
 public class UserService {
 
-    private static final Logger logger = LoggerFactory.getLogger(UserService.class);
+    @Autowired
+    private UserRepository userRepository;
 
-    private final UserRepository userRepository;
-    private final PasswordEncoder passwordEncoder;
-    private final AuthenticationManager authenticationManager;
-    private final JwtTokenProvider jwtTokenProvider;
+    @Autowired
+    private PasswordEncoder passwordEncoder;
 
-    public UserService(UserRepository userRepository,
-                      PasswordEncoder passwordEncoder,
-                      AuthenticationManager authenticationManager,
-                      JwtTokenProvider jwtTokenProvider) {
-        this.userRepository = userRepository;
-        this.passwordEncoder = passwordEncoder;
-        this.authenticationManager = authenticationManager;
-        this.jwtTokenProvider = jwtTokenProvider;
-    }
+    @Autowired
+    private JwtTokenProvider tokenProvider;
 
     public LoginResponse register(RegisterRequest request) {
-        logger.info("Registering new user with email: {}", request.getEmail());
-
         if (userRepository.existsByEmail(request.getEmail())) {
-            logger.warn("Email already exists: {}", request.getEmail());
-            throw new DuplicateResourceException("Email already registered");
+            throw new RuntimeException("Email already exists");
         }
 
-        User user = User.builder()
-                .email(request.getEmail())
-                .gmailId(request.getGmailId())
-                .firstName(request.getFirstName())
-                .lastName(request.getLastName())
-                .password(passwordEncoder.encode(request.getPassword()))
-                .role(User.UserRole.USER)
-                .isActive(true)
-                .createdAt(LocalDateTime.now())
-                .updatedAt(LocalDateTime.now())
-                .build();
+        User user = new User();
+        user.setEmail(request.getEmail());
+        user.setGmailId(request.getGmailId());
+        user.setFirstName(request.getFirstName());
+        user.setLastName(request.getLastName());
+        user.setPassword(passwordEncoder.encode(request.getPassword()));
+        user.setIsActive(true);
+        user.setRole(User.UserRole.USER);
+        user.setCalendarSynced(false);
 
         User savedUser = userRepository.save(user);
-        logger.info("User registered successfully with ID: {}", savedUser.getId());
 
-        String token = jwtTokenProvider.generateToken(savedUser.getId(), savedUser.getEmail());
-
-        return LoginResponse.builder()
-                .accessToken(token)
-                .expiresIn(86400000L)
-                .user(UserDTO.fromEntity(savedUser))
-                .build();
+        String token = tokenProvider.generateToken(savedUser.getId(), savedUser.getEmail());
+        return new LoginResponse(token, 86400000L, UserDTO.fromEntity(savedUser));
     }
 
     public LoginResponse login(LoginRequest request) {
-        logger.info("Login attempt for user: {}", request.getEmail());
+        Optional<User> userOpt = userRepository.findByEmail(request.getEmail());
+        if (userOpt.isEmpty()) {
+            throw new RuntimeException("Invalid credentials");
+        }
 
-        authenticationManager.authenticate(
-                new UsernamePasswordAuthenticationToken(request.getEmail(), request.getPassword())
-        );
+        User user = userOpt.get();
+        if (!passwordEncoder.matches(request.getPassword(), user.getPassword())) {
+            throw new RuntimeException("Invalid credentials");
+        }
 
-        User user = userRepository.findByEmail(request.getEmail())
-                .orElseThrow(() -> new ResourceNotFoundException("User not found"));
+        if (!user.getIsActive()) {
+            throw new RuntimeException("Account is deactivated");
+        }
 
-        String token = jwtTokenProvider.generateToken(user.getId(), user.getEmail());
-
-        logger.info("User logged in successfully: {}", user.getEmail());
-
-        return LoginResponse.builder()
-                .accessToken(token)
-                .expiresIn(86400000L)
-                .user(UserDTO.fromEntity(user))
-                .build();
-    }
-
-    public UserDTO getUserById(Long userId) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new ResourceNotFoundException("User not found with ID: " + userId));
-        return UserDTO.fromEntity(user);
+        String token = tokenProvider.generateToken(user.getId(), user.getEmail());
+        return new LoginResponse(token, 86400000L, UserDTO.fromEntity(user));
     }
 
     public UserDTO getUserByEmail(String email) {
         User user = userRepository.findByEmail(email)
-                .orElseThrow(() -> new ResourceNotFoundException("User not found with email: " + email));
+                .orElseThrow(() -> new RuntimeException("User not found with email: " + email));
+        return UserDTO.fromEntity(user);
+    }
+
+    public UserDTO getUserById(Long userId) {
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new RuntimeException("User not found with id: " + userId));
         return UserDTO.fromEntity(user);
     }
 
     public UserDTO getUserByGmailId(String gmailId) {
         User user = userRepository.findByGmailId(gmailId)
-                .orElseThrow(() -> new ResourceNotFoundException("User not found with Gmail ID: " + gmailId));
+                .orElseThrow(() -> new RuntimeException("User not found with Gmail ID: " + gmailId));
         return UserDTO.fromEntity(user);
     }
 
-    public List<UserDTO> getAllUsers() {
-        return userRepository.findByIsActiveTrue().stream()
-                .map(UserDTO::fromEntity)
-                .toList();
-    }
-
     public List<UserDTO> getAllTeamMembers() {
-        return userRepository.findAll().stream()
-                .filter(User::getIsActive)
+        List<User> users = userRepository.findByIsActiveTrue();
+        return users.stream()
                 .map(UserDTO::fromEntity)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public UserDTO updateUser(Long userId, UserDTO updateRequest) {
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new ResourceNotFoundException("User not found with ID: " + userId));
+                .orElseThrow(() -> new RuntimeException("User not found with id: " + userId));
 
         if (updateRequest.getFirstName() != null) {
             user.setFirstName(updateRequest.getFirstName());
@@ -139,35 +107,18 @@ public class UserService {
         if (updateRequest.getProfilePhoto() != null) {
             user.setProfilePhoto(updateRequest.getProfilePhoto());
         }
+        if (updateRequest.getRole() != null) {
+            user.setRole(updateRequest.getRole());
+        }
 
-        user.setUpdatedAt(LocalDateTime.now());
         User updatedUser = userRepository.save(user);
-
-        logger.info("User updated successfully: {}", userId);
         return UserDTO.fromEntity(updatedUser);
-    }
-
-    public void updateGoogleCalendarToken(Long userId, String accessToken, String refreshToken) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new ResourceNotFoundException("User not found with ID: " + userId));
-
-        user.setGoogleCalendarToken(accessToken);
-        user.setGoogleRefreshToken(refreshToken);
-        user.setCalendarSynced(true);
-        user.setUpdatedAt(LocalDateTime.now());
-
-        userRepository.save(user);
-        logger.info("Google Calendar token updated for user: {}", userId);
     }
 
     public void deactivateUser(Long userId) {
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new ResourceNotFoundException("User not found with ID: " + userId));
-
+                .orElseThrow(() -> new RuntimeException("User not found with id: " + userId));
         user.setIsActive(false);
-        user.setUpdatedAt(LocalDateTime.now());
         userRepository.save(user);
-
-        logger.info("User deactivated: {}", userId);
     }
 }
